--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "mongodb": "^6.9.0",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.4",
     "pm2": "^5.4.2",
     "sitemap": "^7.1.1",
     "slugify": "^1.6.6",
     "unicode": "^14.0.0",
     "unidecode": "^1.1.0",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "config": "^3.3.12"
   },
   "devDependencies": {
     "@types/multer": "^1.4.11",
